Fix broken CSS property in App.css.

--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@
 
 .space-align-container {
     display: flex;
-    align-item: flex-start;
+    align-items: flex-start;
     flex-wrap: wrap;
     background: #fff;
 }
